tests/baselines/reference/unusedParametersinConstructor1.errors.txt
tests/cases/compiler/unusedParametersinConstructor1.ts(2,17): error TS6133: 'param1' is declared but its value is never read.


==== tests/cases/compiler/unusedParametersinConstructor1.ts (1 errors) ====
    class greeter {
        constructor(param1: string) {
                    ~~~~~~
!!! error TS6133: 'param1' is declared but its value is never read.
        }
    }